<resources>
    <string name="app_name">Flags Quiz</string>
    <string name="btntext_guess_the_country">GUESS THE COUNTRY</string>
    <string name="btntext_guess_hints">GUESS HINTS</string>
    <string name="btntext_guess_the_flag">GUESS THE FLAG</string>
    <string name="btntext_advanced_level">ADVANCED LEVEL</string>
    <string name="timer_text">Timer</string>
    <string name="text_guess_country">Guess Country:</string>
    <string name="button_text_submit">SUBMIT</string>
    <string name="txt_flags">FLAGS QUIZ</string>
    <string name="txt_timer">00:10</string>
    <string name="txt_select_country">Select country</string>
    <string name="txt_ans_status">CORRECT</string>
    <string name="txt_correct_answer">Correct answer : ABCD</string>
    <string name="btn_txt_submit">Submit</string>
    <string name="btn_txt_guess_country">Guess the country</string>
    <string name="btn_txt_guess_hints">Guess Hints</string>
    <string name="btn_txt_guess_flag">Guess the Flag</string>
    <string name="btn_txt_advanced_level">Advanced Level</string>
    <string name="txt_Guess_Country">Guess Country</string>
    <string name="txt_country_answer" />
    <string name="txt_score" />
    <string name="txt_pick_flag">Pick the Flag of the Country</string>
    <string name="txt_instructions">Pick the Flag of the Country</string>
    <string name="txt_select_correct_flag">Select correct flag :</string>
    <string name="txt_app_name_launch">Flags Quiz</string>
    <string name="txt_correct">Correct</string>
    <string name="txt_wrong">Wrong !</string>
    <string name="txt_correct_answer_display">Correct answer :</string>
    <string name="btn_txt_Next">Next</string>

    <string-array name="countries">
        <item>Andorra</item>
        <item>United Arab Emirates</item>
        <item>Afghanistan</item>
        <item>Antigua and Barbuda</item>
        <item>Anguilla</item>
        <item>Albania</item>
        <item>Armenia</item>
        <item>Netherlands Antilles</item>
        <item>Angola</item>
        <item>Antarctica</item>
        <item>Argentina</item>
        <item>American Samoa</item>
        <item>Austria</item>
        <item>Australia</item>
        <item>Aruba</item>
        <item>Åland Islands</item>
        <item>Azerbaijan</item>
        <item>Bosnia and Herzegovina</item>
        <item>Barbados</item>
        <item>Bangladesh</item>
        <item>Belgium</item>
        <item>Burkina Faso</item>
        <item>Bulgaria</item>
        <item>Bahrain</item>
        <item>Burundi</item>
        <item>Benin</item>
        <item>Saint Barthelemy</item>
        <item>Bermuda</item>
        <item>Brunei Darussalam</item>
        <item>Bolivia</item>
        <item>Caribbean Netherlands</item>
        <item>Brazil</item>
        <item>Bahamas</item>
        <item>Bhutan</item>
        <item>Bouvet Island</item>
        <item>Botswana</item>
        <item>Belarus</item>
        <item>Belize</item>
        <item>Canada</item>
        <item>Cocos (Keeling) Islands</item>
        <item>Congo</item>
        <item>Central African Republic</item>
        <item>Congo</item>
        <item>Switzerland</item>
        <item>Cote d Ivoire</item>
        <item>Cook Islands</item>
        <item>Chile</item>
        <item>Cameroon</item>
        <item>China</item>
        <item>Colombia</item>
        <item>Costa Rica</item>
        <item>Cuba</item>
        <item>Cape Verde</item>
        <item>Curaçao</item>
        <item>Christmas Island</item>
        <item>Cyprus</item>
        <item>Czech Republic</item>
        <item>Germany</item>
        <item>Djibouti</item>
        <item>Denmark</item>
        <item>Dominica</item>
        <item>Dominican Republic</item>
        <item>Algeria</item>
        <item>Ecuador</item>
        <item>Estonia</item>
        <item>Egypt</item>
        <item>Western Sahara</item>
        <item>Eritrea</item>
        <item>Spain</item>
        <item>Ethiopia</item>
        <item>Europe</item>
        <item>Finland</item>
        <item>Fiji</item>
        <item>Falkland Islands (Malvinas)</item>
        <item>Micronesia</item>
        <item>Faroe Islands</item>
        <item>France</item>
        <item>Gabon</item>
        <item>England</item>
        <item>Northern Ireland</item>
        <item>Scotland</item>
        <item>Wales</item>
        <item>United Kingdom</item>
        <item>Grenada</item>
        <item>Georgia</item>
        <item>French Guiana</item>
        <item>Guernsey</item>
        <item>Ghana</item>
        <item>Gibraltar</item>
        <item>Greenland</item>
        <item>Gambia</item>
        <item>Guinea</item>
        <item>Guadeloupe</item>
        <item>Equatorial Guinea</item>
        <item>Greece</item>
        <item>South Georgia and the South Sandwich Islands</item>
        <item>Guatemala</item>
        <item>Guam</item>
        <item>Guinea-Bissau</item>
        <item>Guyana</item>
        <item>Hong Kong</item>
        <item>Heard Island and McDonald Islands</item>
        <item>Honduras</item>
        <item>Croatia</item>
        <item>Haiti</item>
        <item>Hungary</item>
        <item>Indonesia</item>
        <item>Ireland</item>
        <item>Israel</item>
        <item>Isle of Man</item>
        <item>India</item>
        <item>British Indian Ocean Territory</item>
        <item>Iraq</item>
        <item>Iran</item>
        <item>Iceland</item>
        <item>Italy</item>
        <item>Jersey</item>
        <item>Jamaica</item>
        <item>Jordan</item>
        <item>Japan</item>
        <item>Kenya</item>
        <item>Kyrgyzstan</item>
        <item>Cambodia</item>
        <item>Kiribati</item>
        <item>Comoros</item>
        <item>Saint Kitts and Nevis</item>
        <item>Korea</item>
        <item>Korea, Republic of</item>
        <item>Kuwait</item>
        <item>Cayman Islands</item>
        <item>Kazakhstan</item>
        <item>Lao</item>
        <item>Lebanon</item>
        <item>Saint Lucia</item>
        <item>Liechtenstein</item>
        <item>Sri Lanka</item>
        <item>Liberia</item>
        <item>Lesotho</item>
        <item>Lithuania</item>
        <item>Luxembourg</item>
        <item>Latvia</item>
        <item>Libya</item>
        <item>Morocco</item>
        <item>Monaco</item>
        <item>Moldova, Republic of</item>
        <item>Montenegro</item>
        <item>Saint Martin</item>
        <item>Madagascar</item>
        <item>Marshall Islands</item>
        <item>Macedonia, the former Yugoslav Republic of</item>
        <item>Mali</item>
        <item>Myanmar</item>
        <item>Mongolia</item>
        <item>Macao</item>
        <item>Northern Mariana Islands</item>
        <item>Martinique</item>
        <item>Mauritania</item>
        <item>Montserrat</item>
        <item>Malta</item>
        <item>Mauritius</item>
        <item>Maldives</item>
        <item>Malawi</item>
        <item>Mexico</item>
        <item>Malaysia</item>
        <item>Mozambique</item>
        <item>Namibia</item>
        <item>New Caledonia</item>
        <item>Niger</item>
        <item>Norfolk Island</item>
        <item>Nigeria</item>
        <item>Nicaragua</item>
        <item>Netherlands</item>
        <item>Norway</item>
        <item>Nepal</item>
        <item>Nauru</item>
        <item>Niue</item>
        <item>New Zealand</item>
        <item>Oman</item>
        <item>Panama</item>
        <item>Peru</item>
        <item>French Polynesia</item>
        <item>Papua New Guinea</item>
        <item>Philippines</item>
        <item>Pakistan</item>
        <item>Poland</item>
        <item>Saint Pierre and Miquelon</item>
        <item>Pitcairn</item>
        <item>Puerto Rico</item>
        <item>Palestine</item>
        <item>Portugal</item>
        <item>Palau</item>
        <item>Paraguay</item>
        <item>Qatar</item>
        <item>Réunion</item>
        <item>Romania</item>
        <item>Serbia</item>
        <item>Russian Federation</item>
        <item>Rwanda</item>
        <item>Saudi Arabia</item>
        <item>Solomon Islands</item>
        <item>Seychelles</item>
        <item>Sudan</item>
        <item>Sweden</item>
        <item>Singapore</item>
        <item>Saint Helena, Ascension and Tristan da Cunha</item>
        <item>Slovenia</item>
        <item>Svalbard and Jan Mayen Islands</item>
        <item>Slovakia</item>
        <item>Sierra Leone</item>
        <item>San Marino</item>
        <item>Senegal</item>
        <item>Somalia</item>
        <item>Suriname</item>
        <item>South Sudan</item>
        <item>Sao Tome and Principe</item>
        <item>El Salvador</item>
        <item>Sint Maarten (Dutch part)</item>
        <item>Syrian Arab Republic</item>
        <item>Swaziland</item>
        <item>Turks and Caicos Islands</item>
        <item>Chad</item>
        <item>French Southern Territories</item>
        <item>Togo</item>
        <item>Thailand</item>
        <item>Tajikistan</item>
        <item>Tokelau</item>
        <item>Timor-Leste</item>
        <item>Turkmenistan</item>
        <item>Tunisia</item>
        <item>Tonga</item>
        <item>Turkey</item>
        <item>Trinidad and Tobago</item>
        <item>Tuvalu</item>
        <item>Taiwan</item>
        <item>Tanzania, United Republic of</item>
        <item>Ukraine</item>
        <item>Uganda</item>
        <item>US Minor Outlying Islands</item>
        <item>United States</item>
        <item>Uruguay</item>
        <item>Uzbekistan</item>
        <item>Holy See (Vatican City State)</item>
        <item>Saint Vincent and the Grenadines</item>
        <item>Venezuela</item>
        <item>Virgin Islands, British</item>
        <item>Virgin Islands, U.S.</item>
        <item>Viet Nam</item>
        <item>Vanuatu</item>
        <item>Wallis and Futuna Islands</item>
        <item>Kosovo</item>
        <item>Samoa</item>
        <item>Yemen</item>
        <item>Mayotte</item>
        <item>South Africa</item>
        <item>Zambia</item>
        <item>Zimbabwe</item>

    </string-array>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>

    <string name="interstitial_ad_sample">Interstitial Ad Sample</string>
    <string name="start_level">Level 1</string>
    <string name="next_level">Next Level</string>
    <!-- -
        This is an ad unit ID for an interstitial test ad. Replace with your own interstitial ad unit id.
        For more information, see https://support.google.com/admob/answer/3052638
    <!- -->
    <string name="interstitial_ad_unit_id">ca-app-pub-3940256099942544/1033173712</string>
</resources>
