<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".ActivityGuessHints">

    <TextView
        android:id="@+id/tvCountDown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_margin="20dp"
        android:visibility="invisible"
        android:text="@string/txt_timer"
        android:textColor="@color/red"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/ivCountryImage"
        android:layout_width="250dp"
        android:layout_height="150dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/lk" />

    <LinearLayout
        android:id="@+id/lytNameHint"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:gravity="center"
        android:orientation="horizontal">

    </LinearLayout>

    <TextView
        android:id="@+id/tvMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/txt_ans_status"
        android:textColor="@color/green"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/tvCorrectAns"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/txt_correct_answer"
        android:textColor="@color/blue"
        android:visibility="invisible"/>

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:onClick="checkAnswer"
        android:text="@string/btn_txt_submit"/>

</LinearLayout>
