<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    tools:context=".ActivitySelectOption">

    <TextView
        android:id="@+id/tvMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="50dp"
        android:text="@string/txt_flags"
        android:textColor="@color/textMessageColor"
        android:textStyle="bold"
        android:textSize="25sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:padding="10dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="10dp"
            android:orientation="vertical"
            android:layout_weight="1">

            <Button
                android:id="@+id/btnGuessCountry"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="5dp"
                android:onClick="loadGuessTheCountry"
                android:text="@string/btn_txt_guess_country"
                android:layout_weight="1"
                android:background="@drawable/button_shape"
                android:textColor="@color/btnTextColor"
                android:textSize="17sp" />

            <Button
                android:id="@+id/btnAdvancedLevel"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:onClick="loadAdvancedLevel"
                android:text="@string/btn_txt_advanced_level"
                android:layout_weight="1"
                android:background="@drawable/button_shape"
                android:textColor="@color/btnTextColor"
                android:textSize="17sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnGuessFlag"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:onClick="loadGuessTheFlag"
                android:text="@string/btn_txt_guess_flag"
                android:background="@drawable/button_shape"
                android:textColor="@color/btnTextColor"
                android:textSize="17sp" />

            <Button
                android:id="@+id/btnGuessHints"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/btn_txt_guess_hints"
                android:onClick="loadGuessHints"
                android:background="@drawable/button_shape"
                android:textColor="@color/btnTextColor"
                android:textSize="17sp" />

        </LinearLayout>

    </LinearLayout>

    <Switch android:id="@+id/switch_timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        android:textSize="18sp"
        android:text="@string/timer_text"
        android:switchPadding="15dp"
        android:textColor="@color/textMessageColor"
        android:checked="false"/>

</LinearLayout>