<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdvancedLevel">

    <TextView
        android:id="@+id/tvCountDown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginBottom="100dp"
        android:textSize="20sp"
        android:text="@string/txt_timer"
        android:textColor="@color/red"
        android:layout_gravity="start"/>
    <TextView
        android:id="@+id/tvScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginBottom="100dp"
        android:textSize="20sp"
        android:text="@string/txt_score"
        android:textColor="@color/green"
        android:layout_gravity="start"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivCountryImage1"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="50dp"
                android:src="@drawable/lk" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/txt_country_answer"
                android:textSize="17sp" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivCountryImage2"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="50dp"
                android:src="@drawable/lk"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_country_answer"
                android:textSize="17sp"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivCountryImage3"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="50dp"
                android:src="@drawable/lk"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_country_answer"
                android:textSize="17sp"/>

        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginStart="la"
        android:text="@string/btn_txt_submit"/>

</LinearLayout>