<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ActivityGuessTheFlag">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvCountDown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_margin="20dp"
            android:text="@string/txt_timer"
            android:textColor="@color/red"
            android:textSize="20sp"
            android:visibility="visible" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center"
                android:text="Select correct flag : "
                android:textSize="20sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="INDIA"
                android:textSize="20sp"/>
        </LinearLayout>

        <ImageView
            android:id="@+id/ivCountryImage1"
            android:layout_width="200dp"
            android:layout_height="130dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/lk" />

        <ImageView
            android:id="@+id/ivCountryImage2"
            android:layout_width="200dp"
            android:layout_height="130dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/in" />

        <ImageView
            android:id="@+id/ivCountryImage3"
            android:layout_width="200dp"
            android:layout_height="130dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/jp" />

        <TextView
            android:id="@+id/tvMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/txt_ans_status"
            android:textColor="@color/green"
            android:textSize="20sp"
            android:visibility="visible" />

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:text="@string/btn_txt_submit" />
    </LinearLayout>

</ScrollView>